fixed broken references